# capture_pico

./: CMakeLists.txt  README.md  package.xml
cfg/: recognition_parameter.toml
include/: PicoListener.hpp  PicoSensorClass.h  PicoSensorSetter.h  PicoZenseSensorClass.h  PicoZenseSetter.h  header.h
src/: PicoSensorClass.cpp  PicoSensorSetter.cpp  PicoZenseSensorClass.cpp  PicoZenseSetter.cpp  SensorManager.cpp  main.cpp
